--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "12306-mcp",
-  "version": "0.3.2",
+  "version": "0.3.4",
   "main": "build/index.js",
   "scripts": {
+    "prebuild": "rm -rf build/*",
     "build": "tsc",
+    "postbuild:darwin:linux": "chmod +x build/index.js",
+    "prepare": "npm run build",
     "test": "tsc && node ./build/index.js",
+    "test:http": "tsc && node ./build/index.js --port 8080",
     "debug": "tsc && npx @modelcontextprotocol/inspector node ./build/index.js"
   },
   "keywords": [
@@ -18,12 +22,15 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
     "axios": "^1.8.4",
+    "commander": "^14.0.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "mcp-http-server": "^1.1.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "run-script-os": "^1.1.6",
     "typescript": "^5.8.3"
   },
   "type": "module",
